--- a/Megalovania.html
+++ b/Megalovania.html
@@ -3,13 +3,13 @@
     <head>
 
         <head>
-            <title>Want You Gone</title>
+            <title>Megalovania</title>
         </head>
 
         <body>
-            <img src="GladOS.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
+            <img src="Sans.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
             <audio controls>
-                <source src="Want You Gone.mp3" type="audio/mpeg">
+                <source src="Megalovania.mp3" type="audio/mpeg">
             </audio>
         </body>
     </head>
