--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
 
             
-<a href="http://www.editey.com/preview/0B5VmSVw2UnuDYVFtZW9EVE1tTGc/Radioactive%20Instramental.html?email=christian.rowberry@student.rjuhsd.us">Radioactive Instramental (By Imagine Dragons)</a>
+<a href="Radioactive [Instramental].html">Imagine Dragons Radioactive Instramental</a>
             <br>
             <br>
-
-            
-<a href="http://www.editey.com/preview/0B5VmSVw2UnuDYVFtZW9EVE1tTGc/Want%20You%20Gone.html?email=christian.rowberry@student.rjuhsd.us">Want You Gone (By Johnathon Coulton)</a>
+<a href="Megalovania.html">Undertale Megalovania</a>
+            <br>
+            <br>
+<a href="Want You Gone.html">Johnathon Coulton Want You Gone</a>
         </body>
 
     </html>
