--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
             
-<a href="Radioactive [Instramental].html">Imagine Dragons Radioactive Instramental</a>
+<a href="Radioactive Instramental.html">Imagine Dragons Radioactive Instramental</a>
             <br>
             <br>
 <a href="Megalovania.html">Undertale Megalovania</a>
