Update Two Steps From H3LL.html

--- a/Two Steps From H3LL.html
+++ b/Two Steps From H3LL.html
@@ -3,11 +3,11 @@
     <head>
 
         <head>
-            <title>Two Steps from Hell (Protectors of the Earth)</title>
+            <title>Two Steps from Hell (Protectors of Earth)</title>
         </head>
 
         <body>
-            <img src="Sans.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
+            <img src="" alt="You are unable to veiw images..." style="width:339px;height:340px;">
             <audio controls>
                 <source src="Two Steps from Hell - Protectors of the Earth.mp3" type="audio/mpeg">
             </audio>
