--- a/Battle For Earth.html
+++ b/Battle For Earth.html
@@ -3,13 +3,13 @@
     <head>
 
         <head>
-            <title>Template</title>
+            <title>Battle For Earth</title>
         </head>
 
         <body>
-            <img src="" alt="You are unable to veiw images..." style="width:339px;height:340px;">
+            <img src="2 Steps From....jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
             <audio controls>
-                <source src="" type="audio/mpeg">
+                <source src="Battle For Earth - Protectors of the Earth.mp3" type="audio/mpeg">
             </audio>
         </body>
     </head>
