--- a/Megalovania.html
+++ b/Megalovania.html
@@ -10,6 +10,7 @@
             <img src="Sans.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
             <audio controls>
                 <source src="Megalovania.mp3" type="audio/mpeg">
+            <a href="index.html">Home</a>
             </audio>
         </body>
     </head>
