--- a/Rogue One Theme.html
+++ b/Rogue One Theme.html
@@ -11,6 +11,7 @@
             <audio controls>
 
                 <source src="Rogue One.mp3" type="audio/mpeg">
+                <a href="index.html">Home</a>
             </audio>
         </body>
     </head>
