--- a/Want You Gone.html
+++ b/Want You Gone.html
@@ -10,6 +10,7 @@
             <img src="GladOS.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
             <audio controls>
                 <source src="Want You Gone.mp3" type="audio/mpeg">
+                <a href="index.html">Home</a>
             </audio>
         </body>
     </head>
