--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
             
 <h1>Welcome to my song website!</h1>
             <p>Below are some links for the songs.
-            <br>
             Please do NOT steal this sites code, also, all songs are NOT mine, if you want to download them,
-            <br>DO NOT come to here</p>
+            DO NOT come to here</p>
             
 <a href="Radioactive Instramental.html">Imagine Dragons Radioactive Instramental</a>
             <br>
