--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 </head>
 
 <body>
-  Hello World!
-  
+  Welcome to my music website!
+  <br>
+  DO NOT go here to download the songs, DO NOT ask for download links, DO comment and like!
 </body>
-
+  <a href="Battle For Earth.html">Battle For Earth</a>
+  <a href="Megalovania.html">Megalovania</a>
+  <a href="Radioactive Instramental.html"></a>
+  <a href="Rogue One Theme.html">Rogue One Theme</a>
+  <a href="Want You Gone.html">Want You Gone</a>
 </html>
