--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <head>
   <title>Home</title>
 </head>
-
+<style>
+body {background-color: rose;}
+h1   {color: orange;}
+</style>
 <body>
+  <h1>
   Welcome to my music website!
   <br>
   <br>
   DO NOT go here to download the songs, DO NOT ask for download links, DO comment and like!
   <br>
-</body>
+  </h1>
   <a href="Battle For Earth.html">Battle For Earth</a>
   <br>
   <br>
@@ -27,4 +31,5 @@
   <a href="Want You Gone.html">Want You Gone</a>
   <br>
   <br>
+</body>
 </html>
