--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Home</title>
 </head>
 <style>
-body {background-color: rose;}
+body {background-color: navy;}
 h1   {color: orange;}
 </style>
 <body>
