--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@ body {background-color: navy;}
 h1   {color: orange;}
 </style>
 <body>
+  <br>  
+  <br>
+  <br>
+  <img src="Home ICON.png" alt="Song Icon Insert Here" width="256" height="256">
+  <br>
+  <br>
+  <br>
   <h1>
   Welcome to my music website!
   <br>
