--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 </head>
 <style>
 body {background-color: navy;}
-h1   {color: orange;}
+  h1   {color: orange;}
+a:link    {color:orange; background-color:transparent; text-decoration:none}
+a:visited {color:yellow; background-color:transparent; text-decoration:none}
+a:hover   {color:red; background-color:transparent; text-decoration:underline}
+a:active  {color:yellow; background-color:transparent; text-decoration:underline}
 </style>
 <body>
   <br>  
