Update Want You Gone.html

--- a/Want You Gone.html
+++ b/Want You Gone.html
@@ -1,7 +1,10 @@
 <DOCTYPE html>
 
     <head>
-
+<style>
+body {background-color: navy;}
+  h1   {color: orange;}
+</style>
         <head>
             <title>Want You Gone</title>
         </head>
