--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
+  <body>
   <b>
   <title>Home</title>
-</head>
 <style>
 body {background-color: navy;}
   h1   {color: orange;}
@@ -41,6 +41,11 @@ a:active  {color:yellow; background-color:transparent; text-decoration:underline
   <a href="Want You Gone.html">Want You Gone</a>
   <br>
   <br>
-  </b>
-</body>
-  </html>
+  <a href="Want You Gone.html">Want You Gone</a>
+  <br>
+  <br>
+  <a href="BattleVSTrueHero.html">Battle Against A True Hero-Piano</a>
+  <br>
+  <br>
+  </body>
+</html>
