--- a/BattleVSTrueHero.html
+++ b/BattleVSTrueHero.html
@@ -7,7 +7,7 @@
         </head>
 
         <body>
-            <img src="Undyne" alt="You are unable to veiw images..." style="width:339px;height:340px;">
+            <img src="Undyne.png" alt="You are unable to veiw images..." style="width:339px;height:340px;">
             <audio controls>
                 <source src="098 - Battle Against a True Hero.mp3" type="audio/mpeg">
             </audio>
