--- a/Megalovania.html
+++ b/Megalovania.html
@@ -6,7 +6,7 @@
         </head>
 
         <body>
-            <img src="Sans.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
+            <img src="sans.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
             <audio controls>
                 <source src="Megalovania.mp3" type="audio/mpeg">
             </audio>
