--- a/Template.html
+++ b/Template.html
@@ -11,5 +11,6 @@
             <audio controls>
                 <source src="" type="audio/mpeg">
             </audio>
+            <a href="index.html">Home</a>
         </body>
     </head>
