--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@ a:active  {color:yellow; background-color:transparent; text-decoration:underline
   <br>
   <a href="BattleVSTrueHero.html">Battle Against A True Hero-Piano</a>
   <br>
+  <br> 
+  <a href="Reconstructing Science.html">Reconstructing Science Remix</a>
+  <br>
   <br>
   </body>
 </html>
