--- a/Reconstructing Science.html
+++ b/Reconstructing Science.html
@@ -7,7 +7,7 @@
         </head>
 
         <body>
-            <img src="glados_broken" alt="You are unable to veiw images..." style="width:339px;height:340px;">
+            <img src="glados_broken.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
             <audio controls>
                 <source src="Reconstructing Science.mp3" type="audio/mpeg">
             </audio>
