--- a/Battle For Earth.html
+++ b/Battle For Earth.html
@@ -7,7 +7,7 @@
 
         <body>
             <img src="2 Steps From....jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
-            <audio controls>
+            <audio controls loop="loop">
                 <source src="Battle For Earth - Protectors of the Earth.mp3" type="audio/mpeg">
             </audio>
             <a href="index.html">Home</a>
