--- a/BattleVSTrueHero.html
+++ b/BattleVSTrueHero.html
@@ -8,7 +8,7 @@
 
         <body>
             <img src="Undyne.png" alt="You are unable to veiw images..." style="width:339px;height:340px;">
-            <audio controls>
+            <audio controls loop="loop">
                 <source src="098 - Battle Against a True Hero.mp3" type="audio/mpeg">
             </audio>
             <a href="index.html">Home</a>
