--- a/Megalovania.html
+++ b/Megalovania.html
@@ -1,15 +1,15 @@
 <DOCTYPE html>
-
-    <head>
+    <html>
         <head>
             <title>Megalovania</title>
         </head>
 
         <body>
             <img src="sans.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
-            <audio controls>
+            <audio controls loop="loop">
                 <source src="Megalovania.mp3" type="audio/mpeg">
             </audio>
             <a href="index.html">Home</a>
         </body>
     </head>
+</html>
