--- a/Radioactive Instramental.html
+++ b/Radioactive Instramental.html
@@ -7,7 +7,7 @@
 
         <body>
             <img src="Radioactive.png" alt="You are unable to veiw images..." style="width:340px;height:340px;">
-            <audio controls>
+            <audio controls loop="loop">
 
                 <source src="Radioactive [Instrumental].mp3" type="audio/mpeg">
             </audio>
