--- a/Reconstructing Science.html
+++ b/Reconstructing Science.html
@@ -8,7 +8,7 @@
 
         <body>
             <img src="glados_broken.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
-            <audio controls>
+            <audio controls loop="loop">
                 <source src="Reconstructing Science.mp3" type="audio/mpeg">
             </audio>
             <a href="index.html">Home</a>
