Update Rogue One Theme.html

--- a/Rogue One Theme.html
+++ b/Rogue One Theme.html
@@ -7,7 +7,7 @@
 
         <body>
             <img src="Vader.jpg" alt="You are unable to veiw images..." style="width:340px;height:340px;">
-            <audio controls>
+            <audio controls loop="loop">
 
                 <source src="Rogue One.mp3" type="audio/mpeg">
             </audio>
