--- a/Want You Gone.html
+++ b/Want You Gone.html
@@ -7,7 +7,7 @@
 
         <body>
             <img src="GladOS.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
-            <audio controls>
+            <audio controls loop="loop">
                 <source src="Want You Gone.mp3" type="audio/mpeg">
             </audio>
             <a href="index.html">Home</a>
