--- a/index.html
+++ b/index.html
@@ -47,5 +47,10 @@ a:active  {color:yellow; background-color:transparent; text-decoration:underline
   <a href="Reconstructing Science.html">Reconstructing Science Remix</a>
   <br>
   <br>
+  <style type="text/css">
+textarea.html-text-box {background-color:#ffffff;background-image:url(http://);background-repeat:no-repeat;background-attachment:fixed;border-width:1;border-style:solid;border-color:#cccccc;font-family:Cursive;font-size:14pt;color:#0000FF;}
+input.html-text-box {background-color:#ffffff;font-family:Cursive;font-size:14pt;color:#000000;}
+</style>
+<form method="post" action="http://"><textarea name="comments" cols="30" rows="5" class="html-text-box">Comment here...</textarea><br><input type="submit" value="Submit" class="html-text-box"><input type="reset" value="Reset" class="html-text-box"></form>
   </body>
 </html>
