--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <b>
   <title>Home</title>
 <style>
-body {background-color: blue;}
-  h1   {color: orange;}
+body {background-color: white;}
+  h1   {color: black;}
 a:link    {color:orange; background-color:transparent; text-decoration:none}
 a:visited {color:yellow; background-color:transparent; text-decoration:none}
 a:hover   {color:red; background-color:transparent; text-decoration:underline}
