--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <b>
   <title>Home</title>
 <style>
-body {background-color: white;}
+body {background-color: blue;}
   h1   {color: black;}
 a:link    {color:orange; background-color:transparent; text-decoration:none}
 a:visited {color:yellow; background-color:transparent; text-decoration:none}
