--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ a:active  {color:yellow; background-color:transparent; text-decoration:underline
   <br>
   <br>
   <h1>
-  Welcome to my music website!
+ Git Sound! GitHubs Newest Music Site! 
   <br>
   <br>
   DO NOT go here to download the songs, DO NOT ask for download links, DO comment and like!
