--- a/Template.html
+++ b/Template.html
@@ -8,7 +8,7 @@
 
         <body>
             <img src="" alt="You are unable to veiw images..." style="width:339px;height:340px;">
-            <audio controls>
+            <audio controls loop="loop">
                 <source src="" type="audio/mpeg">
             </audio>
             <a href="index.html">Home</a>
