--- a/Battle For Earth.html
+++ b/Battle For Earth.html
@@ -10,6 +10,7 @@
             <audio controls loop="loop">
                 <source src="Battle For Earth - Protectors of the Earth.mp3" type="audio/mpeg">
             </audio>
+            <link rel="stylesheet" href="styles.css">
             <a href="index.html">Home</a>
         </body>
     </head>
