--- a/BattleVSTrueHero.html
+++ b/BattleVSTrueHero.html
@@ -12,5 +12,6 @@
                 <source src="098 - Battle Against a True Hero.mp3" type="audio/mpeg">
             </audio>
             <a href="index.html">Home</a>
+            <link rel="stylesheet" href="styles.css">
         </body>
     </head>
