--- a/Megalovania.html
+++ b/Megalovania.html
@@ -10,6 +10,7 @@
                 <source src="Megalovania.mp3" type="audio/mpeg">
             </audio>
             <a href="index.html">Home</a>
+            <link rel="stylesheet" href="styles.css">
         </body>
     </head>
 </html>
