--- a/Still Alive.html
+++ b/Still Alive.html
@@ -12,5 +12,6 @@
                 <source src="Portal Still Alive.mp3" type="audio/mpeg">
             </audio>
             <a href="index.html">Home</a>
+            <link rel="stylesheet" href="styles.css">
         </body>
     </head>
