--- a/Template.html
+++ b/Template.html
@@ -12,5 +12,6 @@
                 <source src="" type="audio/mpeg">
             </audio>
             <a href="index.html">Home</a>
+            <link rel="stylesheet" href="styles.css">
         </body>
     </head>
