--- a/Want You Gone.html
+++ b/Want You Gone.html
@@ -11,6 +11,6 @@
                 <source src="Want You Gone.mp3" type="audio/mpeg">
             </audio>
             <a href="index.html">Home</a>
-            <link rel="stylesheet" href="stylesheet.css">
+            <link rel="stylesheet" href="styles.css">
         </body>
     </head>
