--- a/Megalovania.html
+++ b/Megalovania.html
@@ -5,12 +5,14 @@
         </head>
 
         <body>
+            <link rel="stylesheet" href="styles.css">
+
             <img src="sans.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
             <audio controls loop="loop">
                 <source src="Megalovania.mp3" type="audio/mpeg">
             </audio>
             <a href="index.html">Home</a>
             <link rel="stylesheet" href="styles.css">
-        </body>
-    </head>
-</html>
+              </body>
+         </head>
+    </html>
