--- a/Radioactive Instramental.html
+++ b/Radioactive Instramental.html
@@ -6,6 +6,8 @@
         </head>
 
         <body>
+            <link rel="stylesheet" href="styles.css">
+
             <img src="Radioactive.png" alt="You are unable to veiw images..." style="width:340px;height:340px;">
             <audio controls loop="loop">
 
