--- a/Reconstructing Science.html
+++ b/Reconstructing Science.html
@@ -7,6 +7,8 @@
         </head>
 
         <body>
+            <link rel="stylesheet" href="styles.css">
+
             <img src="glados_broken.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
             <audio controls loop="loop">
                 <source src="Reconstructing Science.mp3" type="audio/mpeg">
