--- a/Want You Gone.html
+++ b/Want You Gone.html
@@ -6,11 +6,24 @@
         </head>
 
         <body>
+            
+            <link rel="stylesheet" href="styles.css">
+                  Rating:
+      <span class="starRating">
+        <input id="rating5" type="radio" name="rating" value="5">
+        <label for="rating5">5</label>
+        <input id="rating4" type="radio" name="rating" value="4">
+        <label for="rating4">4</label>
+        <input id="rating3" type="radio" name="rating" value="3" checked>
+        <label for="rating3">3</label>
+        <input id="rating2" type="radio" name="rating" value="2">
+        <label for="rating2">2</label>
+        <input id="rating1" type="radio" name="rating" value="1">
+        <label for="rating1">1</label>
             <img src="GladOS.jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
             <audio controls loop="loop">
                 <source src="Want You Gone.mp3" type="audio/mpeg">
             </audio>
             <a href="index.html">Home</a>
-            <link rel="stylesheet" href="styles.css">
         </body>
     </head>
