--- a/Battle For Earth.html
+++ b/Battle For Earth.html
@@ -6,11 +6,23 @@
         </head>
 
         <body>
-        <link rel="stylesheet" href="styles.css">
+        
+            <link rel="stylesheet" href="styles.css">
+                  Rating:
+      <span class="starRating">
+        <input id="rating5" type="radio" name="rating" value="5">
+        <label for="rating5">5</label>
+        <input id="rating4" type="radio" name="rating" value="4">
+        <label for="rating4">4</label>
+        <input id="rating3" type="radio" name="rating" value="3" checked>
+        <label for="rating3">3</label>
+        <input id="rating2" type="radio" name="rating" value="2">
+        <label for="rating2">2</label>
+        <input id="rating1" type="radio" name="rating" value="1">
+        <label for="rating1">1</label>
             <img src="2 Steps From....jpg" alt="You are unable to veiw images..." style="width:339px;height:340px;">
             <audio controls loop="loop">
                 <source src="Battle For Earth - Protectors of the Earth.mp3" type="audio/mpeg">
             </audio>
-            <a href="index.html">Home</a>
         </body>
     </head>
