Update Battle For Earth.html

--- a/Battle For Earth.html
+++ b/Battle For Earth.html
@@ -24,5 +24,6 @@
             <audio controls loop="loop">
                 <source src="Battle For Earth - Protectors of the Earth.mp3" type="audio/mpeg">
             </audio>
+          <a href="index.html">Home</a>
         </body>
     </head>
